--- a/sci2/deployment/edu.iu.sci2.gui.brand.feature/extra-files/configuration/Welcome.properties
+++ b/sci2/deployment/edu.iu.sci2.gui.brand.feature/extra-files/configuration/Welcome.properties
@@ -7,8 +7,9 @@ the National Science Foundation under Grant No. SBE-0738111 and IIS-0715303, and
 See the Science of Science Cyberinfrastructure portal (http://sci2.cns.iu.edu) for documentation, screenshots, and \
 to ask an expert. \n\
 \n\
-The primary investigators are Katy Börner, Indiana University and Kevin W. Boyack, SciTech Strategies Inc. The Sci2 \
-tool was developed by Chin Hua Kong, Adam Simpson, Steven Corenflos, Joseph Biberstine, Thomas G. Smith, David M. Coe, \
+The primary investigators are Katy B\u00f6rner, Indiana University and Kevin W. Boyack, SciTech Strategies Inc. The Sci2 \
+tool was developed by Daniel Halsey, Adam Simpson, Saumya Pandey, Sumit Samant, Vivek Karihaloo, Chin Hua Kong, \
+Steven Corenflos, Joseph Biberstine, Thomas G. Smith, David M. Coe, \
 Micah W. Linnemeier, Patrick A. Phillips, Chintan Tank, and Russell J. Duhon. It uses the Cyberinfrastructure Shell \
 (http://cishell.org) developed at the Cyberinfrastructure for Network Science Center (http://cns.iu.edu) at \
 Indiana University. Many algorithm plugins were derived from the Network Workbench Tool (http://nwb.cns.iu.edu).\n\
