--- a/sci2/deployment/edu.iu.sci2.gui.brand/plugin.properties
+++ b/sci2/deployment/edu.iu.sci2.gui.brand/plugin.properties
@@ -2,9 +2,9 @@ productName = Cyberinfrastructure Shell
 appName = CIShellApplication
 aboutImage = icons/about.gif
 windowImages = icons/alt16.gif,icons/alt32.gif,icons/alt64.gif
-blurb = The Sci\u00B2 Tool\n\
-Version: 1.1 beta \n\
-(c) Copyright 2009 Indiana University\n\
+blurb = The Sci2 Tool\n\
+Version: 1.2 beta \n\
+(c) Copyright 2009-2015 Indiana University\n\
 Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with \n\
 the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 \n\
 \n\
@@ -14,11 +14,12 @@ the National Science Foundation under Grant No. SBE-0738111 and IIS-0715303, and
 See the Science of Science Cyberinfrastructure portal (http://sci2.cns.iu.edu) for documentation, screenshots, and \n\
 to ask an expert. \n\
 \n\
-The primary investigators are Katy Börner, Indiana University and Kevin W. Boyack, SciTech Strategies Inc. The Sci2 \n\
-tool was developed by Chin Hua Kong, Adam Simpson, Steven Corenflos, Joseph Biberstine, Thomas G. Smith, David M. Coe, \n\
-Micah W. Linnemeier, Patrick A. Phillips, Chintan Tank, and Russell J. Duhon. It uses the Cyberinfrastructure Shell \n\
-(http://cishell.org) developed at the Cyberinfrastructure for Network Science Center (http://cns.iu.edu) at \n\
-Indiana University. Many algorithm plugins were derived from the Network Workbench Tool (http://nwb.cns.iu.edu).\n\
+The primary investigators are Katy BÃ¶rner, Indiana University and Kevin W. Boyack, SciTech Strategies Inc. The Sci2 \n\
+tool was developed by Daniel Halsey, Adam Simpson, Saumya Pandey, Sumit Samant, Vivek Karihaloo, Chin Hua Kong, \n\
+Steven Corenflos, Joseph Biberstine, Thomas G. Smith, David M. Coe, Micah W. Linnemeier, Patrick A. Phillips, \n\
+Chintan Tank, and Russell J. Duhon. It uses the Cyberinfrastructure Shell (http://cishell.org) developed at the \n\
+Cyberinfrastructure for Network Science Center (http://cns.iu.edu) at Indiana University. \n\
+Many algorithm plugins were derived from the Network Workbench Tool (http://nwb.cns.iu.edu).\n\
 \n\
 Please cite as follows:\n\
 Sci2 Team. (2009). Science of Science (Sci2) Tool. Indiana University and SciTech Strategies, https://sci2.cns.iu.edu.\n
