--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.cishell</groupId>
 		<artifactId>parent</artifactId>
-<!-- 		<version>0.0.1</version> -->
+		<version>0.0.1</version>
 	</parent>
 	<modules>
 		<module>org.cishell.plugins</module>
