--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,18 @@
 		<version>0.0.1</version>
 	</parent>
 	<modules>
-		<module>org.cishell.plugins</module>
 		<module>nwb</module>
 		<module>sci2</module>
 	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>org.cishell</groupId>
+			<artifactId>plugins</artifactId>
+			<version>1.2.0</version>
+			<type>jar</type>
+			<optional>true</optional>
+		</dependency>
+	</dependencies>
 	<properties>
 		<tychoVersion>0.18.1</tychoVersion>
 		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
