--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 			<groupId>org.cishell</groupId>
 			<artifactId>plugins</artifactId>
 			<version>1.2.0</version>
+			<type>pom</type>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
