Updated to improve the build process and remove the need for an ant script to compile and merge non-pde plugins.
There is still room to improve the process, but this should be a little more reliable.

--- a/epic_tool/plugins/pom.xml
+++ b/epic_tool/plugins/pom.xml
@@ -15,5 +15,6 @@
 	<modules>
 		<module>libs</module>
 		<module>normal_plugins</module>
+		<module>nonpde_plugins</module>
 	</modules>
 </project>
