--- a/sci2/deployment/pom.xml
+++ b/sci2/deployment/pom.xml
@@ -12,6 +12,7 @@
     <module>edu.iu.sci2.gui.brand.feature</module>
     <module>edu.iu.sci2.gui.brand.welcometext</module>
     <module>edu.iu.sci2.javaalgorithms.feature</module>
+    <module>edu.iu.sci2.staticexecutable.feature</module>
     <module>edu.iu.sci2.releng</module>
     <module>edu.iu.sci2.future.feature</module>
     <module>edu.iu.sci2.future.p2</module>
