--- a/epic_tool/pom.xml
+++ b/epic_tool/pom.xml
@@ -8,10 +8,12 @@
   <packaging>pom</packaging>
   <modules>
   <module>plugins</module>
+  <!-- <module>deployment</module> -->
   </modules>
   <parent>
-  	<groupId>edu.iu.nwb</groupId>
-  	<artifactId>parent</artifactId>
-  	<version>1.0.0</version>
-  </parent>
+		<groupId>org.cishell</groupId>
+		<artifactId>applications</artifactId>
+		<version>1.0.0</version>
+    <relativePath>..</relativePath>
+	</parent>
 </project>
