--- a/sci2/deployment/edu.iu.sci2.future.p2/pom.xml
+++ b/sci2/deployment/edu.iu.sci2.future.p2/pom.xml
@@ -1,10 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <artifactId>deployment</artifactId>
-    <groupId>edu.iu.sci2.deployment</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>deployment-module</artifactId>
+    <groupId>org.cishell.applications</groupId>
+    <version>2.1.0-SNAPSHOT</version>
   </parent>
+
+  <version>2.1.0-SNAPSHOT</version>
   <artifactId>edu.iu.sci2.future.p2</artifactId>
+  <groupId>org.cishell.applications</groupId>
   <packaging>eclipse-repository</packaging>
 </project>
