--- a/sci2/deployment/edu.iu.nwb.library.feature/pom.xml
+++ b/sci2/deployment/edu.iu.nwb.library.feature/pom.xml
@@ -8,9 +8,10 @@
     <groupId>org.cishell.applications</groupId>
     <version>2.1.0-SNAPSHOT</version>
   </parent>
-
+  
   <groupId>org.cishell.applications</groupId>
-  <artifactId>edu.iu.sci2.gui.brand.feature</artifactId>
+  <artifactId>edu.iu.nwb.library.feature</artifactId>
   <version>2.1.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
+
 </project>
