--- a/sci2/deployment/edu.iu.sci2.future.feature/pom.xml
+++ b/sci2/deployment/edu.iu.sci2.future.feature/pom.xml
@@ -1,11 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.iu.sci2.future.feature</groupId>
+  <groupId>org.cishell.applications</groupId>
   <artifactId>edu.iu.sci2.future.feature</artifactId>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
   <parent>
-  	<groupId>edu.iu.sci2.deployment</groupId>
-  	<artifactId>deployment</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
+    <artifactId>deployment-module</artifactId>
+    <groupId>org.cishell.applications</groupId>
+    <version>2.1.0-SNAPSHOT</version>
   </parent>
 </project>
