--- a/sci2/deployment/edu.iu.sci2.gui.brand/pom.xml
+++ b/sci2/deployment/edu.iu.sci2.gui.brand/pom.xml
@@ -2,13 +2,15 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>deployment</artifactId>
-    <groupId>edu.iu.sci2.deployment</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+  
+ <parent>
+    <artifactId>deployment-module</artifactId>
+    <groupId>org.cishell.applications</groupId>
+    <version>2.1.0-SNAPSHOT</version>
   </parent>
-  <groupId>edu.iu.sci2.deployment</groupId>
+
+  <groupId>org.cishell.applications</groupId>
   <artifactId>edu.iu.sci2.gui.brand</artifactId>
-  <version>1.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
