--- a/sci2/deployment/edu.iu.sci2.library.feature/pom.xml
+++ b/sci2/deployment/edu.iu.sci2.library.feature/pom.xml
@@ -3,12 +3,13 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>deployment</artifactId>
-    <groupId>edu.iu.sci2.deployment</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>deployment-module</artifactId>
+    <groupId>org.cishell.applications</groupId>
+    <version>2.1.0-SNAPSHOT</version>
   </parent>
-  <groupId>edu.iu.sci2.library.feature</groupId>
+  
+  <groupId>org.cishell.applications</groupId>
   <artifactId>edu.iu.sci2.library.feature</artifactId>
-  <version>1.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
 </project>
