--- a/sci2/deployment/edu.iu.sci2.releng/pom.xml
+++ b/sci2/deployment/edu.iu.sci2.releng/pom.xml
@@ -4,13 +4,14 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>deployment</artifactId>
-		<groupId>edu.iu.sci2.deployment</groupId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-	<groupId>edu.iu.sci2.deployment</groupId>
+    <artifactId>deployment-module</artifactId>
+    <groupId>org.cishell.applications</groupId>
+    <version>2.1.0-SNAPSHOT</version>
+  </parent>
+
+	<groupId>org.cishell.applications</groupId>
 	<artifactId>edu.iu.sci2.releng</artifactId>
-	<version>1.0.0</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
 
 	<build>
