--- a/sci2/deployment/pom.xml
+++ b/sci2/deployment/pom.xml
@@ -2,12 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.iu.sci2.deployment</groupId>
-  <artifactId>deployment</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>org.cishell.applications</groupId>
+  <artifactId>deployment-module</artifactId>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-
+    <module>edu.iu.nwb.library.feature</module>
     <module>edu.iu.sci2.library.feature</module>
     <module>edu.iu.sci2.converter.feature</module>
     <module>edu.iu.sci2.gui.brand</module>
@@ -18,18 +18,12 @@
     <module>edu.iu.sci2.future.feature</module>  
     <module>edu.iu.sci2.future.p2</module>
     <module>edu.iu.sci2.source.feature</module>
-    <!-- does not work -->
-    
-    <!-- Below module giving org.cishell.utility.dict error -->
-     <module>edu.iu.sci2.releng</module> 
-    
-    
+    <module>edu.iu.sci2.releng</module> 
     <module>edu.iu.sci2.p2</module>
-    
   </modules>
   <parent>
-  	<groupId>edu.iu.sci2</groupId>
-  	<artifactId>parent</artifactId>
-  	<version>1.0.0</version>
+  	<groupId>org.cishell.applications</groupId>
+  	<artifactId>sci2-module</artifactId>
+  	<version>2.1.0-SNAPSHOT</version>
   </parent>
 </project>
